tests/parsing/smtlib/mcil/errors/231_define-system_bad_subsys_decl_3.mcil
(define-system sys :subsys (a b c))